Removed fixed grid row gap

--- a/assets/css/style-home.css
+++ b/assets/css/style-home.css
@@ -11,8 +11,6 @@ article h2, article p {
 
 .wrap-all {
     width: 100%;
-    grid-row-gap: 1.5rem;
-    row-gap: 1.5rem;
 }
 
 .grid--projects {
